Fix menu hover bug in IE. Fix header height

--- a/shared-header-footer-sass/_header.scss
+++ b/shared-header-footer-sass/_header.scss
@@ -125,6 +125,7 @@
 // TABLET
 @media screen and (max-width: 767px) {
   #header {
+    padding-bottom: 58px;
     .container {
       margin: 0 15px;
     }
